<resources>
    <string name="app_name">Ebola Care Guidelines</string>
    <string name="action_settings">Settings</string>
    <string name="action_references">References</string>
    <string name="action_info">Information</string>
    <string name="continue_button">Continue to the app</string>
    <string name="show_guidelines">"Show supportive care guidelines"</string>
    <string name="info_title">Important information</string>
    <string name="info_description">
        "Ebola Care Guidelines is a research app that illustrates the use of Machine Learning "
        "prognostic models for tailored access to evidence-based supportive care guidelines for Ebola patients."</string>
    <string name="info_warning">
        "Use the severity score and care guidelines from this app in combination with clinical judgement."</string>
    <string name="info_preprint">
        "Get a preprint of the article describing the app and models from:"</string>
    <string name="info_preprint_url">"https://www.biorxiv.org/content/10.1101/294587v5"</string>
    <string name="app_repo_url">"https://github.com/broadinstitute/ebola-care-guidelines"</string>
    <string name="prefs_threshold_title">"High-risk threshold"</string>
    <string name="prefs_threshold_summary">"Select the severity score threshold for high-risk patients"</string>
    <string name="prefs_dataentry_title">"Data-entry form"</string>
    <string name="prefs_dataentry_summary">"Select the form to enter patient data"</string>
    <string name="prefs_dataentry_builtin">"Use built-in form"</string>
    <string name="prefs_dataentry_commcare">"Use CommCare app"</string>
    <string name="info_commcare_title">"Using CommCare to enter data"</string>
    <string name="info_commcare_description">"You first need to download CommCare from Google Play, "
        "open it and install the Ebola Patient Management app. If you already did this, please continue. "
        "If not, go back and then check the section 'Using the CommCare data-entry app' "
        "in the website below for further instructions:"</string>
    <string name="continue_to_commcare_button">"Continue to CommCare"</string>
    <string name="pick_dataentry">"Use CommCare to:"</string>
    <string name="commcare_new_case">"Enter new case"</string>
    <string name="commcare_lookup_case">"Lookup an existing case"</string>
    <string name="case_selector_title">"Select a case"</string>
    <string name="references_intro">"The clinical guidelines in this app were compiled from the following resources:"</string>
    <string name="severity_score">SEVERITY SCORE:</string>
    <string name="severity_score_high">HIGH</string>
    <string name="severity_score_no_data">SEVERITY SCORE:\nNO DATA</string>
    <string name="enter_patient_data">ENTER\nPATIENT DATA</string>
    <string name="guidelines_help_message">"Tap on the recommendations below for more information.\n"
        "Highlighted recommendations address the signs/symptoms that are driving up the patient's severity score."</string>
    <string name="recommendation_oral_rehydration">"Oral rehydration"</string>
    <string name="recommendation_parenteral_fluids">"Parenteral administration of fluids"</string>
    <string name="recommendation_monitoring_vitals">"Monitoring of vital signs and volume status"</string>
    <string name="recommendation_serum_biochemistry">"Serum biochemistry"</string>
    <string name="recommendation_staffing_ratio">"High staffing ratio"</string>
    <string name="recommendation_communication">"Communication with family and friends"</string>
    <string name="recommendation_medicines">"Medicine for fever/pain/diarrhoea/vomiting"</string>
    <string name="recommendation_antimalarials_antibiotics">"Antimalarials and antibiotics"</string>
    <string name="recommendation_blood_transfusion">"Blood transfusion and vitamin K treatment"</string>
    <string name="recommendation_parenteral_nutrition">"Parenteral nutrition support"</string>
    <string name="recommendation_renal_replacement">"Renal replacement therapy"</string>
    <string name="recommendation_respiratory_support">"Respiratory support"</string>
    <string name="recommendation_pregnancy_care">"Special care for pregnant patients"</string>
    <string name="bookmarks_help_message">
        "Tap on the buttons below to get specific intervention guides related to this recommendation."
    </string>
    <string name="oral_rehydration_description">
        "Oral rehydration therapy focuses on ensuring actual fluid intake rather than simply the "
        "delivery of an oral rehydration solution. Patients who are too young or ill to prepare "
        "and drink oral rehydration solution independently require active assistance "
        "from health-care providers. Adequacy of oral fluid intake refers to the volume that will "
        "prevent or correct signs of hypovolaemia and should be considered on an individual basis. "
        "This recommendation is unlikely to increase transmission of Ebola virus to health workers."
    </string>
    <string name="parenteral_fluids_description">
        "Parenteral administration of fluids is recommended to patients who are unable to drink or "
        "who have inadequate oral intake to keep up with current volume losses. Options for "
        "parenteral fluid administration include peripheral and central intravenous or intra-osseous "
        "routes. Enteral fluids via nasogastric tube could be an acceptable alternative for selected "
        "patients (eg, children with difficult intravenous access with adequate gastrointestinal "
        "motility, mild to moderate volume depletion, and tolerance of a nasogastric tube), and with "
        "sufficient provider technical skill."
    </string>
    <string name="monitoring_vitals_description">
        "Monitoring and documentation of vital signs to detect hypovolaemia and early warning signs "
        "of poor outcomes might reduce mortality and are unlikely to increase transmission of Ebola "
        "virus to health workers. Vital signs are components of the physical examination that can "
        "ascertain volume status (ie, heart rate, blood pressure, gastrointestinal fluid loss, urine "
        "output, and, in children, capillary refill, skin pinch, and tears), as well as mental status, "
        "respiratory rate, oxygen saturation, and temperature."
    </string>
    <string name="serum_biochemistry_description">
        "Measuring and charting serum biochemistry with a clinically relevant correction of abnormalities "
        "might reduce mortality. This intervention could result in a small increase in the risk for "
        "Ebola virus transmission to health workers. Whenever possible, biochemistry tests should be "
        "consolidated with Ebola virus testing and with blood sampled via an existing intravenous line "
        "or needles with safety features to minimise the risk of needle-stick injury. In addition to "
        "the expected survival benefits associated with treatment of severe biochemical abnormalities, "
        "the intervention could reduce iatrogenic deaths caused by inappropriate administration of "
        "electrolytes (eg, potassium in acute renal failure), and brain oedema associated with rapid "
        "correction of hypernatraemia with hypotonic solutions."
    </string>
    <string name="staffing_ratio_description">
        "Increased clinician-to-patient ratios probably reduce mortality. The effect on the risk of "
        "Ebola virus transmission is unknown. The term clinician encompasses nurses, clinical officers, "
        "and physicians. In practice, clinicians work with a partner or team in the isolation zone "
        "to ensure adherence to appropriate IPC practices. The minimum recommended clinician:patient "
        "ratio is an average (eg, could vary within Ebola treatment units on the basis of clinical "
        "severity). The clinical contact time likely influences care more than staffing ratios per se. "
        "Monitoring of patients can be facilitated by Ebola treatment unit design and technology. "
        "Non-clinician health workers can support clinical staff (eg, to assist in administration of "
        "oral rehydration solution)."
    </string>
    <string name="communication_description">
        "Facilitating the communication of isolated patients with family and friends, including enabling "
        "the use of cell phones or the internet, might reduce psychological distress and can be achieved "
        "without increasing the risk of Ebola virus transmission. Closer contact situations, including "
        "burials, can be safe if appropriate IPC practices, such as use of physical barriers, are employed."
    </string>
    <string name="medicines_description">
        "Analgesic therapy reduces pain. With the available evidence, it was not possible to assess "
        "whether non-steroidal anti-inflammatory analgesics (particularly those that inhibit cyclooxygenase-1) "
        "should be avoided because of anti-platelet effects or risks of acute kidney injury in the "
        "setting of Ebola virus disease. Additional medications may be needed depending upon the "
        "patient's clinical presentation. These include:\n"
        "* Antipyretic agents (eg, acetaminophen, paracetamol) to decrease fever associated with Ebola "
        "virus disease. Dose reduction of these agents may be needed for patients with progressive hepatic dysfunction. "
        "As already mentioned, non-steroidal anti­inflammatory agents are generally avoided to help minimize the risk of renal failure.\n"
        "* Antiemetic medications to control nausea and vomiting.\n"
        "* Antimotility agents (eg, loperamide) to control diarrhea and decrease fluid and electrolyte losses.\n"
        "* Anti­epileptic medications for those with seizures."
    </string>
    <string name="antimalarials_antibiotics_description">
        "Ebola virus disease patients may require evaluation and/or treatment of other concomitant "
        "or possible infections (eg, malaria). In addition, empiric antimicrobial treatment should be "
        "administered to patients with clinical evidence of bacterial sepsis, which may be a late complication. "
        "The choice of agent should provide adequate coverage for gram­negative pathogens. "
        "Empiric gram­positive therapy should be added in certain patients, such as those with "
        "hospital­acquired pneumonia or indwelling central venous catheters.\n"
        "Antibiotic use can increase antibiotic resistance. However, the degree of antibiotic use we "
        "recommend for the management of patients during an Ebola virus disease outbreak probably "
        "represents a negligible increase in the overall use of antibiotics, and it is therefore unlikely "
        "to have a significant effect on antibiotic resistance."
    </string>
    <string name="blood_transfusion_description">
        "Blood products (eg, packed red blood cells, platelets, fresh frozen plasma) may be needed "
        "for patients with coagulopathy and bleeding."
    </string>
    <string name="response_yes">"Yes"</string>
    <string name="response_no">"No"</string>
    <string name="response_female">"Female"</string>
    <string name="response_male">"Male"</string>
    <string name="response_na">"Do not know"</string>
    <string name="patient_intro">"Enter below the information about the patient."</string>
    <string name="patient_age">"Age in years:"</string>
    <string name="patient_sex">"Sex:"</string>
    <string name="patient_pregnant">"Pregnant:"</string>
    <string name="patient_weight">"Weight in kg:"</string>
    <string name="patient_height">"Height in cm:"</string>
</resources>