<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".DataInputActivity$PlaceholderFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/patient_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/patient_intro"
                android:id="@+id/ageHelp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/patient_age"
                android:id="@+id/PatientAgeLabel"/>

            <EditText
                android:id="@+id/PatientAgeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:onClick="onEditTextClicked"
                android:tag="PatientAge" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/patient_sex"
                android:id="@+id/PatientSexLabel"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_female"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:tag="PatientSex:0"
                    android:id="@+id/PatientSexFemaleBtn"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_male"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:tag="PatientSex:1"
                    android:id="@+id/PatientSexMaleBtn"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_na"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:tag="PatientSex:na"
                    android:id="@+id/PatientSexNABtn"/>

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/patient_pregnant"
                android:id="@+id/PatientPregnantLabel"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_yes"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:tag="PatientPregnant:1"
                    android:id="@+id/PatientPregnantYesBtn"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_no"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:tag="PatientPregnant:0"
                    android:id="@+id/PatientPregnantNoBtn"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/response_na"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:tag="PatientPregnant:na"
                    android:id="@+id/PatientPregnantNABtn"/>

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/patient_weight"
                android:id="@+id/PatientWeightLabel"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:imeOptions="actionDone"
                android:onClick="onEditTextClicked"
                android:tag="PatientWeight"
                android:id="@+id/PatientWeightEdit"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/patient_height"
                android:id="@+id/PatientHeightLabel"/>

            <EditText
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:imeOptions="actionDone"
                android:onClick="onEditTextClicked"
                android:tag="PatientHeight"
                android:id="@+id/PatientHeightEdit"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>